Portfolio description on small screens fix

--- a/src/components/portfolioSection/portfolioSection.css
+++ b/src/components/portfolioSection/portfolioSection.css
@@ -168,6 +168,7 @@ body[data-theme="dark"] .pItem:nth-child(6) {
 
 @media (max-width: 768px) {
   .pProgress {
+    bottom: 50px;
     width: 50px;
     height: 50px;
   }
